# learn_solana2

./: .gitignore  LICENSE  README.md
anchor/token_example/: Anchor.toml
anchor/token_example/tests/: token_example.ts  token_transfer.ts
mollusk/mollusk_testing/: Cargo.toml  readme.md
mollusk/mollusk_testing/tests/: mollusk_test.rs
mollusk/my_program/: Cargo.toml
mollusk/my_program/src/: lib.rs
mollusk/testing/: Cargo.toml
mollusk/testing/keys/: DevAN8oX8J58rsnaBMDaCtAsQMEu5hBUUYtjdVApMFD8.json
mollusk/testing/src/: main.rs
solana_cookbook/: readme.md  创建代币账户.md
solana_cookbook/counter_program/: Cargo.toml
solana_cookbook/counter_program/examples/: client.rs
solana_cookbook/counter_program/src/: lib.rs
solana_cookbook/example/: package.json  pnpm-lock.yaml
solana_cookbook/hello_world/: Cargo.toml
solana_cookbook/invoke_rust_native/: Cargo.toml  package-lock.json  package.json
solana_cookbook/invoke_test/: Anchor.toml
solana_cookbook/mnemonic_generate/: Cargo.toml
solana_cookbook/sub_events/: package-lock.json  package.json  tsconfig.json
solana_cookbook/surfpool-demo/: Anchor.toml
solana_cookbook/test_sol/: Cargo.toml
solana_cookbook/transaction_test/: Cargo.toml  package-lock.json  package.json  tsconfig.json
solana_cookbook/transaction_test/src/: cu_set.rs  inner_accounts.rs  instruction.rs  introspection.rs  lib.rs  main.rs  main1.rs  main3.rs  main5.rs  main6.rs  main7.rs  main8.rs  offline_sign.ts  partial_sign.ts  pay_with_any_token.ts  pda.rs  read_from_net.ts  sponsor_fee.ts  transaction_struct.rs  write_into_net.ts
(+15 files in other folders)
