[package]
name = "transaction_test"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-client = "3.1.0"
solana-commitment-config = "3.1.0"
solana-sdk = "3.0.0"
solana-system-interface = { version = "3.1.0", features = ["bincode"] }
solana-compute-budget-interface = "3.0.0"
tokio = { version = "1.50.0", features = ["full"] }
anyhow = "1.0"
spl-token-2022-interface = "2.1.0"
